接口管理
